--- a/index.html
+++ b/index.html
@@ -149,22 +149,13 @@
 						</div>
 					</div>
 
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="fas fa-map-marker-alt"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>ĐỊA CHỈ TIỆC CƯỚI</h3>
-							<p>Xóm 11, Đồng Mít, xã Đồng Tâm, huyện Mỹ Đức, thành phố Hà Nội</p>
-						</div>
-					</div>
 					
 					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
 							<i class="fas fa-map-marker-alt"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>ĐỊA CHỈ NHÀ CHÚ RỂ</h3>
+							<h3>ĐỊA CHỈ NHÀ TRAI</h3>
 							<p>Xóm 11, Đồng Mít, xã Đồng Tâm, huyện Mỹ Đức, thành phố Hà Nội</p>
 						</div>
 					</div>
@@ -176,7 +167,7 @@
 						<div class="feature-copy">
 							<h3>LIÊN HỆ</h3>
 							<p>Mọi Thông Tin Chi Tiết Vui Lòng Liên Hệ
-							</br>Mrs Tiến - <a href="tel://0963771939">0963771939</a></p>
+							</br>Mr Tiến - <a href="tel://0963771939">0963771939</a></p>
 						</div>
 					</div>
 
@@ -186,7 +177,7 @@
 				<div class="fh5co-map fh5co-bg" >
 						
 					<iframe 
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7459.124232409752!2d105.67019457154126!3d20.808995773494818!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3134496f30d0b431%3A0x428ae0bfbaec34c3!2zxJDhu5NuZyBNw610LCDEkOG7k25nIFTDom0sIE3hu7kgxJDhu6ljLCBIw6AgTuG7mWksIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1671964195770!5m2!1svi!2s" 
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3729.5682901832993!2d105.6767996!3d20.808746199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313449b721980cf3%3A0x6374e54b28e5449a!2zWHXDom4gxJBp4buBdSDEkOG7k25nIFTDom0!5e0!3m2!1svi!2s!4v1671976080432!5m2!1svi!2s" 
 				width="100%" 
 				height="100%" 
 				style="border:0;" 
