--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 							
 						</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery8.JPG); "> 
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery8.jpeg); "> 
 							
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery9.JPG); ">
